--- a/academia/css/academia.css
+++ b/academia/css/academia.css
@@ -5,6 +5,7 @@
 
 @import url(/academia/css/headers-academy.css);
 @import url(/academia/css/local-treino.css);
+@import url(/academia/css/filtros.css);
 
 :root{
     --black: #1c1c1c;
