--- a/academia/css/filtros.css
+++ b/academia/css/filtros.css
@@ -1,3 +1,6 @@
+
+
+/* ----------------- FILTROS ----------------- */
 .filtros {
     display: flex;
     flex-direction: column;
@@ -6,17 +9,20 @@
     padding-top: 50px;
 }
 
-
+/* ---- UNIDADES ----- */
 .unidades {
     padding-left: 100px;
 }
 
+/* P */
 .unidades p {
     font-size: 14px;
     color: var(--black);
     font-weight: 900;
 }
 
+
+/* ---- CONTAINER-FILTROS ---- */
 .container-filtros {
     display: flex;
     gap: 140px;
@@ -25,41 +31,47 @@
     
 }
 
+/* ---- APLICAR ---- */
 .aplicar {
     display: flex;
     flex-direction: column;
 
 }
 
+/* ---- TITLE-APLICAR ---- */
 .title-aplicar {
     display: flex;
 }
 
+/* H3 */
 .title-aplicar h3 {
     font-size: 25px;
     color: var(--black);
     font-weight: 700;
 }
 
-
+/* ---- APLICAR-FILTROS ---- */
 .aplicar-filtros {
     display: flex;
     flex-direction: column;
     padding-top: 50px;
 }
 
+/* H4 */
 .aplicar-filtros h4 {
     font-size: 16px;
     color: var(--black);
     font-weight: 600;
 }
 
+/* ---- CHECAR ---- */
 .checar {
     display: flex;
     gap: 10px;
     padding-top: 40px;
 }
 
+/* INPUT */
 .checar input {
     width: 25px;
     height: 25px;
@@ -68,11 +80,13 @@
     border: 1px solid var(--black);
 }
 
+/* LABEL */
 .checar label {
     color: rgba(1, 1, 20, 0.88);
     font-size: 16px;
 }
 
+/* ----- CONTAINER-APLICAR ---- */
 .container-aplicar{
     display: flex;
     flex-direction: column;
@@ -80,11 +94,13 @@
     
 }
 
+/* ---- LINHAS-APLICAR ---- */
 .linhas-aplicar{
     display: flex;
     gap: 20px;
 }
 
+/* ---- ITENS-FILTROS ---- */
 .itens-filtros {
     display: flex;
     flex-direction: column;
@@ -96,14 +112,16 @@
 
 }
 
+/* A */
 .itens-filtros a {
     text-decoration: none;
 }
-
+/* ---- IMG-FILTROS ---- */
 .img-filtros {
     display: flex;
 }
 
+/* IMG */
 .img-filtros img {
     width: 320px;
     height: 142px;
@@ -111,30 +129,34 @@
     border-top-right-radius: 4px;
 }
 
-
+/* ---- ADDRESS ---- */
 .address {
     display: flex;
     flex-direction: column;
     padding: 10px;
 }
 
+/* STRONG */
 .address strong {
     color: var(--black);
     font-weight: 800;
     font-size: 16px;
 }
 
+/* P */
 .address p {
     color: rgba(1, 1, 20, 0.88);
     font-size: 12px;
     font-weight: 500;
 }
 
+/* ---- LINK-ACADEMIA ---- */
 .link-academia {
     display: flex;
     padding: 10px;
 }
 
+/* A */
 .link-academia a {
     color: #1977b3;
     font-weight: 600;
@@ -142,12 +164,14 @@
 
 }
 
+/* ---- ONE-MENSAL ---- */
 .one-mensal {
     display: flex;
     padding: 10px;
 }
 
 
+/* P */
 .one-mensal p {
     font-size: 12px;
     padding: 4px 16px;
@@ -157,19 +181,21 @@
     border-radius: 4px;
 }
 
-
+/*---- PAGAR ---- */
 .pagar {
     display: flex;
     justify-content: space-around;
     padding: 10px;
 }
 
+/* P */
 .pagar p{
     font-size: 14px;
     color: var(--black);
     font-weight: 600;
 }
 
+/* ---- BTN-PLANOS ---- */
 .btn-planos{
     display: flex;
     margin: 0px 10px;
@@ -177,10 +203,12 @@
     
 }
 
+/* AFTER */
 .btn-planos button::after{
     position: absolute;
 }
 
+/* BUTTON */
 .btn-planos button{
     width: 100%;
     height: 40px;
@@ -191,15 +219,17 @@
     background-color: var(--orange);
 
 }
-
+/* A */
 .btn-planos button a{
     color: rgba(1, 1, 20, 0.88);
     font-size: 14px;
     font-weight: 700;
 }
 
-
+/* ---- LINHA-CENTER ---- */
 .linha-center{
     display: flex;
     justify-content: center;
 }
+
+
