--- a/academia/css/academia.css
+++ b/academia/css/academia.css
@@ -6,6 +6,7 @@
 @import url(/academia/css/headers-academy.css);
 @import url(/academia/css/local-treino.css);
 @import url(/academia/css/filtros.css);
+@import url(/academia/css/footers.css);
 
 :root{
     --black: #1c1c1c;
