create footer clientes

--- a/clientes/css/clientes.css
+++ b/clientes/css/clientes.css
@@ -5,6 +5,7 @@
 
 @import url(/clientes/headers-academy.css);
 @import url(/clientes/gerenciar-conta.css);
+@import url(/clientes/footer-clientes.css);
 
 
 :root{
