--- a/franqueado/redes-academy.css
+++ b/franqueado/redes-academy.css
@@ -2,7 +2,75 @@
 
 .redes-academy{
     display: flex;
-    flex-direction: column;
 
-    padding-bottom: 300px;
+    padding-bottom: 00px;
+
+    width: 100%;
+    height: 450px;
+
 }
+
+.textos-academy{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 50px;
+
+    width: 200px;
+    flex: 1;
+    background-color: rgba(255,182,18,1);
+
+    position: relative;
+}
+
+.textos-academy h2{
+    width: 400px;
+    font-size: 32px;
+    font-weight: 900;
+}
+
+.textos-academy p{
+    font-size: 20px;
+    font-weight: 900;
+    width: 400px;
+}
+
+
+.img-pessoas{
+    display: flex;
+    flex: 1;
+}
+
+
+.img-pessoas img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.btn-franqueado{
+    display: flex;
+    position: absolute;
+    left: 27px;
+    top: 322px;
+}
+
+.btn-franqueado button{
+    height: 55px;
+    width: 315px;
+    border: none;
+    outline: none;
+
+    font-family: "Montserrat", sans-serif;
+
+    background-color: #E80000;
+    border-radius: 30px;
+
+    color: white;
+    font-size: 20px;
+}
+
+.btn-franqueado button:hover{
+    background-color: #be0606;
+}
+
+
