create revolucao fitness

--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -5,6 +5,7 @@
 
 @import url(/franqueado/heders-franq.css);
 @import url(/franqueado/redes-academy.css);
+@import url(/franqueado/revolucao-fitness.css);
 
 
 :root{
