--- a/franqueado/empreenda.css
+++ b/franqueado/empreenda.css
@@ -1,5 +1,5 @@
 
-
+/* ---------- EMPREENDA ----------- */
 .empreenda{
     display: flex;
     flex-direction: column;
@@ -8,6 +8,7 @@
 
 }
 
+/* ---- TEXT-EMPREENDA ---- */
 .text-empreenda{
     display: flex;
     flex-direction: column;
@@ -16,6 +17,7 @@
     gap: 10px;
 }
 
+/* H2 */
 .text-empreenda h2{
     font-size: 35px;
     font-family: "Montserrat", serif;
@@ -25,12 +27,13 @@
     
 }
 
-
+/* STRONG */
 .text-empreenda strong{
     color: #ffb612;
     font-weight: 600;
 }
 
+/* P */
 .text-empreenda p{
     width: 780px;
     text-align: center;
@@ -38,6 +41,7 @@
     font-weight: 400;
 }
 
+/* ---- CONTAINER-EMPREEENDA ---- */
 .container-empreenda{
     display: flex;
     justify-content: space-between;
@@ -48,11 +52,12 @@
     margin-bottom: 40px;
 }
 
-
+/* ---- ITENS-EMPREENDA ---- */
 .itens-empreenda{
     width: 341px;
     height: 282px;
     background-color: blue;
     border-radius: 4px;
 }
+
 
