--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -7,6 +7,7 @@
 @import url(/franqueado/redes-academy.css);
 @import url(/franqueado/revolucao-fitness.css);
 @import url(/franqueado/empreenda.css);
+@import url(/franqueado/mercado.css);
 
 
 :root{
@@ -14,6 +15,7 @@
     --orange: #ffb612;
     --gray: #e2e8f0;
     --black2: #1a1a1a;
+    --monts : "Montserrat", serif;
     
 
 }
