create section investir

--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -8,6 +8,7 @@
 @import url(/franqueado/revolucao-fitness.css);
 @import url(/franqueado/empreenda.css);
 @import url(/franqueado/mercado.css);
+@import url(/franqueado/investir.css);
 
 
 :root{
