--- a/franqueado/investir.css
+++ b/franqueado/investir.css
@@ -1,16 +1,17 @@
 
-
+/* ---------------- INVESTIR --------------- */
 .investir{
     display: flex;
     flex-direction: column;
 
-    padding-bottom: 300px;
+    padding-bottom: 50px;
 
     width: 100%;
     height: 1210px;
     background-color: var(--orange);
 }
 
+/* ---- TEXT-INVESTIR ---- */
 .text-investir{
     display: flex;
     justify-content: center;
@@ -18,12 +19,14 @@
     padding-block: 40px;
 }
 
+/* H2 */
 .text-investir h2{
     font-size: 35px;
     font-weight: 700;
     font-family: var(--monts);
 }
 
+/* ---- CONTAINER-IMG ---- */
 .container-img{
     display: flex;
     margin: 0px 100px;
@@ -31,12 +34,14 @@
     border-radius: 16px;
 }
 
+/* IMG */
 .container-img img{
     width: 100%;
     object-fit: cover;
     border-radius: 16px;
 }
 
+/* ---- TEXTOS-P ---- */
 .textos-p{
     display: flex;
     justify-content: center;
@@ -45,7 +50,7 @@
 
 }
 
-
+/* P */
 .textos-p p{
     display: flex;
     justify-content: center;
@@ -56,6 +61,7 @@
     font-size: 18px;
 }
 
+/* ---- ICONES-INVESTIR ---- */
 .icones-investir{
     display: flex;
     justify-content: space-between;
@@ -64,14 +70,14 @@
 
 }
 
-
+/* ---- ITENS-INVESTIR ---- */
 .itens-investir{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }
-
+/* SPAN */
 .itens-investir span{
     font-size: 16px;
     font-weight: 400;
@@ -80,6 +86,7 @@
     color: black;
 }
 
+/* ---- CELULARES ---- */
 .celulares{
     display: flex;
     margin: 40px 100px;
@@ -89,12 +96,12 @@
 
 }
 
-
+/* ---- IMG-CELULARES ---- */
 .img-celulares{
     display: flex;
 }
 
-
+/* ---- TEXT-CELULARES ---- */
 .text-celulares{
     display: flex;
     justify-content: center;
@@ -106,6 +113,7 @@
 
 }
 
+/* SPAN */
 .text-celulares span{
     font-size: 1rem;
     font-weight: 400;
@@ -113,3 +121,5 @@
     color: black;
     font-style: normal;
 }
+
+
