create section franquias

--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -9,6 +9,7 @@
 @import url(/franqueado/empreenda.css);
 @import url(/franqueado/mercado.css);
 @import url(/franqueado/investir.css);
+@import url(/franqueado/franquias.css);
 
 
 :root{
