create section forms-franq

--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -11,6 +11,7 @@
 @import url(/franqueado/investir.css);
 @import url(/franqueado/franquias.css);
 @import url(/franqueado/sucessos.css);
+@import url(/franqueado/forms-franq.css);
 
 
 :root{
