create section footer-franq

--- a/franqueado/css/franqueado.css
+++ b/franqueado/css/franqueado.css
@@ -12,6 +12,7 @@
 @import url(/franqueado/franquias.css);
 @import url(/franqueado/sucessos.css);
 @import url(/franqueado/forms-franq.css);
+@import url(/franqueado/footer-franq.css);
 
 
 :root{
