--- a/treinos/css/funcional.css
+++ b/treinos/css/funcional.css
@@ -1,5 +1,5 @@
 
-
+/* ------------- FUNCIONAL ----------------- */
 .funcional{
     display: flex;
     flex-direction: column;
@@ -7,12 +7,15 @@
     padding-bottom: 300px;
 }
 
+/* ---- CONTAINER-FUNCIONAL ---- */
 .container-funcional{
     display: flex;
     width: 100%;
     height: 400px;
 
 }
+
+/* ---- TEXT-FUNCIONAL ---- */
 .text-funcional{
 
     display: flex;
@@ -24,7 +27,7 @@
 
 }
 
-
+/* H2 */
 .text-funcional h2{
     font-size: 32px;
     font-weight: 600;
@@ -33,6 +36,7 @@
     width: 350px;
 }
 
+/* P */
 .text-funcional p{
     width: 350px;
     font-size: 20px;
@@ -40,6 +44,7 @@
     color: var(--black);
 }
 
+/* ---- BTN-ESCOLHER-GYM ---- */
 .btn-escolher-gmy{
     display: flex;
     max-width: 303px;
@@ -51,18 +56,20 @@
     
 }
 
+/* A */
 .btn-escolher-gmy a{
     text-decoration: none;
     color: white;
     font-weight: 700;
 }
 
+/* HOVER */
 .btn-escolher-gmy:hover{
     background-color: red;
 }
 
 
-
+/* ---- IMG-FUNCIONAL ---- */
 .img-funcional{
     display: flex;
     justify-content: center;
@@ -74,6 +81,7 @@
 
 }
 
+/* IMG */
 .img-funcional img{
     width: 500px;
     height: 300px;
