--- a/treinos/css/treinos.css
+++ b/treinos/css/treinos.css
@@ -7,6 +7,7 @@
 @import url(/treinos/css/headers.css);
 @import url(/treinos/css/funcional.css);
 @import url(/treinos/css/exclusivos.css);
+@import url(/treinos/css/aulas.css);
 
 
 
