--- a/treinos/css/treinos.css
+++ b/treinos/css/treinos.css
@@ -8,6 +8,7 @@
 @import url(/treinos/css/funcional.css);
 @import url(/treinos/css/exclusivos.css);
 @import url(/treinos/css/aulas.css);
+@import url(/treinos/css/curtir.css);
 
 
 
