create footer treinos

--- a/treinos/css/treinos.css
+++ b/treinos/css/treinos.css
@@ -9,6 +9,7 @@
 @import url(/treinos/css/exclusivos.css);
 @import url(/treinos/css/aulas.css);
 @import url(/treinos/css/curtir.css);
+@import url(/treinos/css/footers.css);
 
 
 
