--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -6,6 +6,7 @@
 
 @import url(/conhecer/css/headers-conhecer.css);
 @import url(/conhecer/css/descubra.css);
+@import url(/conhecer/css/coach.css);
 
 
 :root{
