rascunhos smart-coach CSS

--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -7,6 +7,7 @@
 @import url(/conhecer/css/headers-conhecer.css);
 @import url(/conhecer/css/descubra.css);
 @import url(/conhecer/css/coach.css);
+@import url(/conhecer/css/smart-coach.css);
 
 
 :root{
