--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -8,6 +8,7 @@
 @import url(/conhecer/css/descubra.css);
 @import url(/conhecer/css/coach.css);
 @import url(/conhecer/css/smart-coach.css);
+@import url(/conhecer/css/especialista.css);
 
 
 :root{
