--- a/conhecer/css/especialista.css
+++ b/conhecer/css/especialista.css
@@ -1,5 +1,5 @@
 
-
+/* ---------------- ESPECIALISTA ------------- */
 .especialista{
     display: flex;
     flex-direction: column;
@@ -7,6 +7,7 @@
     padding-bottom: 100px;
 }
 
+/* ---- TEXT-ESPECIALISTA ---- */
 .text-especialista{
     display: flex;
     flex-direction: column;
@@ -14,26 +15,29 @@
     align-items: center;
 
 }
-
+/* H2 */
 .text-especialista h2{
     font-size: 36px;
     font-weight: 500;
     font-family: var(--monts);
 }
 
+/* STRONG */
 .text-especialista strong{
     font-weight: 900;
 }
 
+/* IMG */
 .text-especialista img{
     margin-top: 40px;
 }
 
-
+/* ---- BTN-QUERO-ESPECIALISTA ---- */
 .btn-quero-especialista{
     display: flex;
 }
 
+/* A */
 .btn-quero-especialista a{
     text-decoration: none;
     display: flex;
@@ -46,8 +50,13 @@
     transition: all .2s;
 }
 
+/* SPAN */
 .btn-quero-especialista a span{
     font-size: 20px;
     color: white;
     font-weight: 700;
+}
+
+.btn-quero-especialista a:hover{
+    background-color: red;
 }
