create section COMO FUNCIONA

--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -9,6 +9,7 @@
 @import url(/conhecer/css/coach.css);
 @import url(/conhecer/css/smart-coach.css);
 @import url(/conhecer/css/especialista.css);
+@import url(/conhecer/css/como-funciona.css);
 
 
 :root{
