--- a/conhecer/css/como-funciona.css
+++ b/conhecer/css/como-funciona.css
@@ -1,5 +1,5 @@
 
-
+/* ------------ COMO-FUNCIONA ----------- */
 .como-funciona{
     display: flex;
     flex-direction: column;
@@ -7,18 +7,20 @@
     padding-bottom: 300px;
 }
 
-
+/* ---- CONTAINER-FUNCIONAS ---- */
 .container-funcionas{
     display: flex;
     justify-content: center;
 }
 
+/* ---- TEXTS-FUNCIONAS ---- */
 .texts-funcionas{
     display: flex;
     
 
 }
 
+/* H3 */
 .texts-funcionas h3{
     font-size: 36px;
     font-family: var(--monts);
@@ -27,16 +29,19 @@
 
 }
 
+/* STRONG */
 .texts-funcionas h3 strong{
     font-weight: 900;
 }
 
+/* ---- LADO-TEXT ---- */
 .lado-text{
     display: flex;
     flex-direction: column;
     width: 400px;
 }
 
+/* ---- TEXTS-SUB ---- */
 .texts-sub{
     display: flex;
     flex-direction: column;
@@ -45,28 +50,32 @@
     /* padding-top: 40px; */
 }
 
-
+/* SPAN */
 .texts-sub span{
     font-size: 12px;
     font-family: var(--monts);
 }
 
+/* STRONG */
 .texts-sub span strong{
     font-weight: 900;
 
     font-family: var(--monts);
 }
 
+/* P */
 .texts-sub p{
     font-size: 12px;
     font-family: var(--monts);
     font-weight: 500;
 }
 
+/* ---- BTN-QUERO-FUNCIONAS ---- */
 .btn-quero-funcionas{
     display: flex;
 }
 
+/* A */
 .btn-quero-funcionas a{
     text-decoration: none;
     display: flex;
@@ -79,9 +88,16 @@
     transition: all .2s;
 }
 
-
+/* SPAN */
 .btn-quero-funcionas a span{
     font-size: 20px;
     color: white;
     font-weight: 700;
 }
+
+
+/* HOVER (A) */
+.btn-quero-funcionas a:hover{
+    background-color: red;
+}
+
