--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -10,6 +10,7 @@
 @import url(/conhecer/css/smart-coach.css);
 @import url(/conhecer/css/especialista.css);
 @import url(/conhecer/css/como-funciona.css);
+@import url(/conhecer/css/assinar-planos.css);
 
 
 :root{
