create section RESULTADOS

--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -11,6 +11,7 @@
 @import url(/conhecer/css/especialista.css);
 @import url(/conhecer/css/como-funciona.css);
 @import url(/conhecer/css/assinar-planos.css);
+@import url(/conhecer/css/resultados.css);
 
 
 :root{
