--- a/conhecer/css/resultados.css
+++ b/conhecer/css/resultados.css
@@ -1,36 +1,42 @@
 
-
+/* ----------------- RESULTADOS -------- */
 .resultados{
     display: flex;
     flex-direction: column;
 
-    padding-bottom: 300px;
+    padding-bottom: 100px;
 }
 
-
+/* ---- TEXT-RESULTADOS ---- */
 .text-resultados{
     display: flex;
     justify-content: center;
 }
 
+/* H2 */
 .text-resultados h2{
     font-size: 36px;
     font-weight: 500;
     font-family: var(--monts);
 }
 
+/* STRONG */
 .text-resultados strong{
     font-weight: 900;
 }
 
+/* ---- CONTAINER-RESULTADOS ---- */
 .container-resultados{
     display: flex;
     margin: 0px 200px;
     height: 292px;
     gap: 50px;
 
+    margin-top: 50px;
+
 }
 
+/* ---- IMG-RESULTADOS ---- */
 .img-resultados{
     display: flex;
     flex: 1;
@@ -39,10 +45,12 @@
     height: 292px
 }
 
+/* IMG */
 .img-resultados img{
     width: 100%;
 }
 
+/* ---- TEXTOS-RSULTADOS ---- */
 .textos-resultados{
     display: flex;
     justify-content: center;
@@ -51,7 +59,7 @@
     flex: 1;
 }
 
-
+/* ---- RESULT-TEXT ---- */
 .result-text{
     display: flex;
     flex-direction: column;
@@ -60,6 +68,7 @@
     width: 80%;
 }
 
+/* P */
 .result-text p{
     font-size: 18px;
     font-weight: 400;
@@ -68,10 +77,12 @@
     line-height: 30px;
 }
 
+/* ---- BTN-QUERO-RESULT ---- */
 .btn-quero-result{
     display: flex;
 }
 
+/* A */
 .btn-quero-result a{
     text-decoration: none;
     display: flex;
@@ -84,14 +95,15 @@
     transition: all .2s;
 }
 
-
+/* SPAN */
 .btn-quero-result a span{
     font-size: 20px;
     color: white;
     font-weight: 700;
 }
 
-
+/* HOVER (A) */
 .btn-quero-result a:hover{
     background-color: red;
 }
+
