--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -12,6 +12,7 @@
 @import url(/conhecer/css/como-funciona.css);
 @import url(/conhecer/css/assinar-planos.css);
 @import url(/conhecer/css/resultados.css);
+@import url(/conhecer/css/duvidas.css);
 
 
 :root{
