create section footer-conhecer

--- a/conhecer/css/conhecer.css
+++ b/conhecer/css/conhecer.css
@@ -13,6 +13,7 @@
 @import url(/conhecer/css/assinar-planos.css);
 @import url(/conhecer/css/resultados.css);
 @import url(/conhecer/css/duvidas.css);
+@import url(/conhecer/css/footer-conhecer.css);
 
 
 :root{
