--- a/energeticos/css/energeticos.css
+++ b/energeticos/css/energeticos.css
@@ -7,6 +7,7 @@
 @import url(/energeticos/css/headers-conhecer.css);
 @import url(/energeticos/css/descubra.css);
 @import url(/energeticos/css/bebidas.css);
+@import url(/energeticos/css/dose-energia.css);
 
 
 
