--- a/energeticos/css/energeticos.css
+++ b/energeticos/css/energeticos.css
@@ -8,6 +8,7 @@
 @import url(/energeticos/css/descubra.css);
 @import url(/energeticos/css/bebidas.css);
 @import url(/energeticos/css/dose-energia.css);
+@import url(/energeticos/css/localidade.css);
 
 
 
