create section NUTRICIONAL

--- a/energeticos/css/energeticos.css
+++ b/energeticos/css/energeticos.css
@@ -10,6 +10,7 @@
 @import url(/energeticos/css/dose-energia.css);
 @import url(/energeticos/css/localidade.css);
 @import url(/energeticos/css/dose-extra.css);
+@import url(/energeticos/css/nutricional.css);
 
 
 
